[package]
name = "lesson_12"
version = "0.32.0"
authors = ["taidaesal"]
edition = "2021"


[dependencies]
bytemuck = { version = "1.12.1", features = ["derive", "extern_crate_std", "min_const_generics"] }
nalgebra-glm = "0.17.0"
vulkano = "=0.34.0"
vulkano-shaders = "=0.34.0"
vulkano-win = "=0.34.0"
winit = "=0.28.7"
